css/main.css
/**
 * NAVBAR STYLES
 */

/*increases the height of the navbar*/
.navbar {
	height: 75px;
	background-color: #fff;
}

.container {
	height: 75px;
}




/*floats the navbar links to the right*/
.navbar-inverse .navbar-nav {
	float: right;
	text-align: right;
	position: relative;
}



/*vertically centers the links, changes link font and color*/
.navbar .nav > li > a {
	color: #edb158;
	font-family: "Lato", "Open Sans", "Helvetica", "Arial", sans-serif;
	font-size: 18px;
	font-weight: 300;
	letter-spacing: 2px;
	line-height: 0px;
}

ul.nav.navbar-nav {
	height: 75px;
	margin-top: 20px;
}

/*vertically centers the main site title*/
.navbar-brand {
	height: 75px;
	line-height: 45px;
}



/*color and font for main site title*/
.navbar-inverse .navbar-brand {
	color: #edb158;
	font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
	font-size: 40px;
	font-weight: 300;
	letter-spacing: 3px;
}

.navbar-inverse .navbar-brand:hover {
	color: #edb158;
}



/*light grey border beneath nav*/
.navbar-inverse {
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 5px solid #f5f5f5;
}


/*active link styles*/
.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
	/*background-color: #fff3e2;*/
	background-color: #fff;
	border: 1px solid #edb158;
	color: #edb158;
}

/*desktop links*/
@media (min-width: 769px) {
	.navbar .nav > li > a {
		color: #edb158;
	}

	.navbar .nav > li > a:hover {
		color: #edb158;
	}
}

/*mobile links*/
@media (max-width: 768px) {
	.navbar .nav > li > a {
		color: #edb158;
		font-size: 14px;
		letter-spacing: 1px;
		line-height: 22px;
		overflow: none;
	}

	.navbar .nav > li > a:hover {
		color: #edb158;
	}
}








/**
 * MOBILE HAMBURGER MENU STYLES
 */

/*gets rid of default black border*/
.navbar-inverse .navbar-toggle {
	border-color: #fff;
}

/*makes lines orange*/
.navbar-inverse .navbar-toggle .icon-bar {
	background-color:#edb158;
}

/*keeps lines orange on hover*/
.navbar-inverse .navbar-toggle .icon-bar:hover {
	background-color:#edb158;
}

button.navbar-toggle.collapsed {
	height: 55px;
	background-color: #fff;
}

/*keeps background white on hover*/
button.navbar-toggle.collapsed:hover {
	background-color: #fff;
	height: 55px;
}

button.navbar-toggle {
	background-color: #fff;
	height: 55px;
} 

button.navbar-toggle:hover {
	background-color: #fff;
	height: 55px;
}

.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
	background-color: #fff;
}

.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
	border-color: #fff;
	font-size:12px;
}

/*mobile nav menu*/
@media (max-width: 768px) {
	div#navbar.collapse.navbar-collapse {
		height: 285%;
		overflow: auto;
		background-color: #fff;
		border-bottom: 5px solid #f5f5f5;
	}
}






/**
 * BODY STYLES
 */

/*smaller space between the first paragraph and the nav bar*/
 .negMargin{
 	margin-top: -15px;
 }

/*header text desktop*/
@media (min-width: 769px) {
	h1 {
		color: #edb158;
		font-family: "Lato", "Helvetica", "Arial", sans-serif;
		font-size: 30px;
		font-weight: 300;
		letter-spacing: 2px;
		text-align: center;
/*		margin-top: 125px;*/
		line-height: 50px;
	}
}

/*header text mobile*/
@media (max-width: 768px) {
	h1 {
		color: #edb158;
		font-family: "Lato", "Helvetica", "Arial", sans-serif;
		font-size: 20px;
		font-weight: 300;
		letter-spacing: 2px;
		margin-top: 60px;
		line-height: 35px;
		text-align: center;
		margin-left: 2%;
		margin-right: 2%;
	}
}

/*body text*/
@media (min-width: 769px) {
	.body {
		font-family: "Roboto Slab", "Andale Mono", serif;
		font-weight: 300;
		font-size: 14px;
		line-height: 24px;
		letter-spacing: 1px;
		text-align: center;
		color: #777;
	}
}


/*body text mobile*/
@media (max-width: 768px) {
	.body {
		font-family: "Roboto Slab", "Andale Mono", serif;
		font-weight: 300;
		font-size: 12px;
		line-height: 24px;
		letter-spacing: 1px;
		text-align: center;
		color: #777;
		padding-top: 15px;
	}
}

.body a {
	color: #edb158;
}






/**
 * ICON IMAGE STYLES
 */

/*icons desktop*/
@media (min-width: 769px) {
	.icons {
		text-align: center;
		padding: 15px;
		max-width: none;
		max-height: none;
	}
}

/*icons mobile*/
@media (max-width: 768px) {
	.icons {
		text-align: right;
		padding: 5px;
		width: 50%;
		height: 50%;
	}
}

@media (max-width: 1169px) {
	.leftIcon {
		text-align: right;
	}
}

@media (max-width: 1169px) {
	.centerIcon {
		text-align: center;
	}
}

@media (max-width: 1169px) {
	.rightIcon {
		text-align: left;
	}
}

@media (min-width: 769px) {
	.singleIcon {
		text-align: center;
		padding: 15px;
		max-width: none;
		max-height: none;
	}
}

@media (max-width: 769px) {
	.singleIcon {
		text-align: center;
		padding: 5px;
		width: 65%;
		height: 65%;
	}
}






/**
 * STORYBOARD SECTION STYLES
 */

/*Storyboard images desktop*/
@media (min-width: 1200px) {
	.storyImg {
		text-align: right;
		padding-top: 30px;
	}
}

/*storyboard images tablet and mobile*/
@media (max-width: 1199px) {
	.storyImg {
		text-align: center;
		padding-top: 15px;
	}
}

/*storyboard text desktop*/
@media (min-width: 1200px) {
	.storyText {
		font-family: "Roboto Slab", "Andale Mono", serif;
		font-weight: 300;
		font-size: 14px;
		line-height: 24px;
		letter-spacing: 1px;
		text-align: left;
		color: #777;
		padding-bottom: 50px;
		padding-top: 30px;
	}
}


/*storyboard text tablet and mobile*/
@media (max-width: 1199px) {
	.storyText {
		font-family: "Roboto Slab", "Andale Mono", serif;
		font-weight: 300;
		font-size: 12px;
		line-height: 24px;
		letter-spacing: 1px;
		text-align: center;
		color: #777;
		padding-top: 15px;
		padding-bottom: 60px;
	}
}

.learnMore {
	background-color: #fff3e2;
	padding: 2px 3px 2px 3px;
	color: #edb158;
}

.learnMore > a{
	color: #edb158;
	text-decoration: none;
}

.learnMore > a:hover {
	text-decoration: none;
}






/**
 * MODAL STYLES 
 */

.modal-title {
	color: #edb158;
	font-family: "Lato", "Helvetica", "Arial", sans-serif;
	font-size: 30px;
	font-weight: 300;
	letter-spacing: 2px;
}

.modal-body {
	font-family: "Roboto Slab", "Andale Mono", serif;
	font-weight: 300;
	font-size: 14px;
	line-height: 24px;
	letter-spacing: 1px;
	text-align: left;
	color: #777;
}

.modalPad {
	padding-bottom: 30px;
}

.orange{
	color: #edb158;
	font-weight: 400;
}

/*square corners*/
* {
  -webkit-border-radius: 0 !important;
     -moz-border-radius: 0 !important;
          border-radius: 0 !important;
}

.btn {
	color: #777;
	font-family: "Roboto Slab", "Andale Mono", serif;
	font-weight: 300;
	font-size: 14px;
	line-height: 24px;
	letter-spacing: 1px;
}

.btn-default:hover {
	background-color: #fff;
	border-color: #ccc;
	color: #edb158;
	font-family: "Roboto Slab", "Andale Mono", serif;
	font-weight: 300;
	font-size: 14px;
	line-height: 24px;
	letter-spacing: 1px;
}

@media (min-width: 769px) {
	.notify {
		border: 3px solid #f5f5f5;
		background-color: #fff;
		margin-top: 75px;
		text-align: center;
		margin-bottom: -18vh;
	}
}

@media (max-width: 768px) {
	.notify {
		border: 3px solid #f5f5f5;
		background-color: #fff;
		margin-top: 75px;
		margin-bottom: -5vh;
		text-align: center;
	}
}

.alert-dismissable .close, .alert-dismissible .close {
	color: #000;
}



.firstSection {
	min-height: 100vh;
}

/*desktop*/
@media (min-width: 969px){
	section {
		padding-top: 20vh;
	}
}

/*tablets*/
@media (max-width: 968px) and (min-width: 769px){
	section {
		padding-top: 18vh;
	}
}

/*mobile*/
@media (max-width: 768px) {
	section {
		padding-top: 9vh;
	}
}

